# trains-network-tool

./: .gitignore  .prettierrc.json  404.html  CNAME  README.md  index.html  index.txt  instructions.md  package-lock.json  package.json  pyproject.toml  states.json  tailwind.config.ts
.github/workflows/: build.yml
_next/static/chunks/: 290-04dbfc73408bc70f.js  758-f7500b4ed1a92884.js  79-21ae2825523016bb.js  cebd11e7-5613a6e8d1c513ee.js  main-app-ac2afe2e5db41258.js  webpack-7ad2627c23d17653.js  webpack-bbcf964dd13612fd.js
_next/static/chunks/app/: layout-2513f8d93af9a6c9.js  page-1eb10157e7cb5154.js  page-3078225ae20a7397.js  page-4b5abb251a611382.js  page-f64b23ba5e6347a8.js
_next/static/css/: 0c800b2cdef2a784.css  c66df80f729cdd0c.css
app/: globals.css  index.d.ts  page.tsx
app/lib/: graphAlgorithms.ts
public/: cities.csv  segments.csv
src/trains/: cli.py
