[tool.poetry]
name = "the-trains"
version = "0.1.0"
description = ""
authors = ["Kevin H Wilson <khwilson@gmail.com>"]
readme = "README.md"
packages = [{include = "trains", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
click = "^8.1.7"
us = "^3.1.1"
pandas = "^2.1.2"
openpyxl = "^3.1.2"
geopandas = "^0.14.0"
rtree = "^1.1.0"

[tool.poetry.scripts]
trains = "trains.cli:cli"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
